--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 
 <h2 id="Top"> A Few of My Favorite Things</h2> 
-<p><a href="#things">favorite things</a> | </p>
+<p><a href="#things">favorite things</a> | <a href="#pets">favorite pets</a> | <a href="#tv">favorite tv Shows</a> |  <a href="#books">favorite books</a> | <a href="#remarks">final Remarks</a> |</p> 
 <p> & One of my favorites movies of all time is interstellar </p> 
 <h3 id="things"> Things I Like to Do:</h3>
 <ul>
@@ -19,8 +19,8 @@
 
 <hr>
 
-<h3 id="Pets"> Favorite Pets:</h3>
-<p><a href="#pets">favorite pets</a> | </p>
+<h3 id="pets"> Favorite Pets:</h3>
+<p> </p>
 <ul>
    <li> Dogs </li>
    <li> Horses </li>
@@ -29,8 +29,8 @@
 
 <hr>
 
-<h3 id="TV">Favorite TV Shows:</h3>
-<p><a href="#tv">favorite tv Shows</a> | </p>
+<h3 id="tv">Favorite TV Shows:</h3>
+<p> 
 <ul type="square">
    <li> House</li>
    <li> The Closer</li>
@@ -42,8 +42,7 @@
 
 <hr>
 
-<h3 id="Books">Favorite Books:</h3>
-<p><a href="#books">favorite books</a> | </p>
+<h3 id="books">Favorite Books:</h3>
 <ul>
    <li> Harry Potter and the Sorcerer's Stone</li>
    <li> The Lord of the Rings Trilogy</li>
@@ -55,8 +54,8 @@
 
 <hr>
 
-<h3 id="Remarks">Final Remarks:</h3>
-<p><a href="#remarks">final Remarks</a> | </p>
+<h3 id="remarks">Final Remarks:</h3>
+<p> </p>
 <p>
 	If you would like, you are welcomed to modify these list of 
 	favorite things to be your own favorite things. 	
